feat: add data service
